tests/invalid/Coercion_Invalid_9.whiley
type A is (int x)
type B is (int x)
type C is (int x)

function f(A x) -> (B|C r):
    return x
